# master_crm

./: .env.example  .gitignore  Caddyfile  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_enable_rls.py  003_add_booking_exclusion_and_master_settings.py  004_add_payment_and_settings_columns.py  005_add_notification_columns_and_reminders.py  006_add_max_vk_master_columns.py  007_add_qr_sessions_table.py  008_fix_rls_empty_string.py  009_add_master_profile_fields.py  010_add_portfolio_photos.py  011_add_reviews.py  012_add_client_sessions.py  013_add_payment_fns_receipt.py  014_add_otp_columns_to_client_sessions.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  base.py  booking.py  client.py  client_session.py  master.py  payment.py  portfolio_photo.py  qr_session.py  review.py  schedule.py  scheduled_reminder.py  service.py
backend/app/schemas/: analytics.py  auth.py  booking.py  client.py  master.py  payment.py  portfolio.py  review.py  schedule.py  service.py  settings.py  slot.py
backend/scripts/: init-db.sql
backend/tests/: conftest.py  test_auth.py  test_auth_tg.py  test_bookings.py  test_bot.py  test_clients.py  test_health.py  test_notifications.py  test_payments.py  test_phone.py  test_profile_settings.py  test_public_api.py  test_reminders.py  test_rls.py  test_robokassa.py  test_schedule.py  test_services.py  test_settings.py
(+341 files in other folders)
